Better url shortener message.

--- a/popup.html
+++ b/popup.html
@@ -229,7 +229,7 @@ var Composer = {
 }
 
 var Shortener = {
-  SHORTENER_IDLE_STR: 'Type a URL to make it shorter.',
+  SHORTENER_IDLE_STR: 'Type a URL to make it shorter, or, click right here \u2192',
 
   init: function() {
     var savedUrl = tweetManager.composerData.urlShortener;
