--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Chromed Bird
 <div id="wrong_browser" class="top_box">
 </div>
 
-<div id="install" class="top_box" onclick="location.href='http://cloud.github.com/downloads/cezarsa/chromed_bird/chromed_bird_0.51.crx'">
+<div id="install" class="top_box" onclick="location.href='https://clients2.google.com/service/update2/crx?response=redirect&x=id%3Dencaiiljifbdbjlphpgpiimidegddhic%26uc%26lang%3Den-US'">
 Install it now!
 </div>
 
