--- a/popup.html
+++ b/popup.html
@@ -139,7 +139,7 @@ var Composer = {
   reply: function (node) {
     Composer.showComposeArea(true);
     var el = $("#compose_tweet_area textarea");
-    var user = $(".user", node).text();
+    var user = $(".user", node).attr('screen_name');
     el.val("@" + user + " ");
     tweetManager.composerData.replyId = Composer.replyId = $(node).attr('tweetid');
     Composer.textareaChanged();
@@ -420,9 +420,18 @@ var Renderer = {
       inReply = '<a href="' + linkDst + '" onclick="openTab(\'' + linkDst + '\')">in reply to ' + tweet.in_reply_to_screen_name + '</a> ';
     }
 
+    var nameAttribute = OptionsBackend.get('name_attribute');
+    var tweetUserName = user[nameAttribute];
+    var tweetTitleUserName;
+    if(nameAttribute.indexOf('screen') == 0) {
+      tweetTitleUserName = user.name;
+    } else {
+      tweetTitleUserName = user.screen_name;
+    }
+
     var str = '<div tweetid="' + tweet.id + '" class="' + tweetClass + '">';
     str += '<img class="profile" src="' + user.profile_image_url + '" onclick="openTab(\'' + TwitterLib.URLS.BASE + user.screen_name + '\')"></img>';
-    str += '<a href="#" class="user" onclick="openTab(\'' + TwitterLib.URLS.BASE + user.screen_name + '\')">' + user.screen_name + '</a>';
+    str += '<a href="#" class="user" screen_name="' + user.screen_name + '" onclick="openTab(\'' + TwitterLib.URLS.BASE + user.screen_name + '\')" title="' + tweetTitleUserName + '">' + tweetUserName + '</a>';
 
     str += '<div class="extra_tweet_data">';
     if(inReply) {
